--- a/template/package.json
+++ b/template/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^19.1.0",
+    "react-docker-template": "file:",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1"
   },
