[Setup|Refactoring] Docker, Vite, and templates: migrated to Vite-based build system with multistage Dockerfile, updated environment variable handling, and improved project structure.

--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -2,9 +2,10 @@ services:
   react-app:
     build: .
     ports:
-      - "3000:3000"
+      - "80:80"
     volumes:
       - .:/app
       - /app/node_modules
     environment:
+      - VITE_BACKEND_URL=${VITE_BACKEND_URL}
       - CHOKIDAR_USEPOLLING=true  # Needed for hot reload on some OS
