--- a/template/package.json
+++ b/template/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "react": "^19.1.0",
-    "react-docker-template": "file:",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1"
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^6.3.5"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
