[Env|UI] Environment variables and Footer: added VITE_COMPANY_NAME to env configs and displayed company name in footer.

--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -8,4 +8,5 @@ services:
       - /app/node_modules
     environment:
       - VITE_BACKEND_URL=${VITE_BACKEND_URL}
+      - VITE_COMPANY_NAME=${VITE_COMPANY_NAME}
       - CHOKIDAR_USEPOLLING=true  # Needed for hot reload on some OS
