--- a/template/public/env.js.template
+++ b/template/public/env.js.template
@@ -22,5 +22,6 @@
  * are currently being used and how to configure them.
  */
 window._env_ = {
-  VITE_BACKEND_URL: "http://localhost:8080"
+  VITE_BACKEND_URL: "http://localhost:8080",
+  VITE_COMPANY_NAME: "Felicitas Wisdom"
 };
